force-app/main/default/objects/ssot__LoyaltyProgramCurrencySubtype__dlm/fields/ssot__rel_1729831879749_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729831879749_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyProgramCurrencySubtype_Loyalt_rel</label>
    <referenceTo>ssot__LoyaltyProgramCurrency__dlm</referenceTo>
    <relationshipLabel>LoyaltyProgramCurrencySubtype_Loyalt_rel</relationshipLabel>
    <relationshipName>rel_1729831879749_end</relationshipName>
    <type>Lookup</type>
</CustomField>