force-app/main/default/objects/ssot__LoyaltyProgramCurrencySubtype__dlm/fields/ssot__UsagePriorityNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__UsagePriorityNumber__c</fullName>
    <label>Usage Priority Number</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UsagePriorityNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>